# shipit

./: .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs
contrib/: generate-proto
examples/java/: pom.xml
examples/java/src/main/java/name/dflemstr/shipit/: Client.java  Main.java  Protocol.java
examples/rust/: main.rs
examples/simple/: main.rs  shipit_protocol.rs
proto/: protocol.proto
src/: comm.rs  error.rs  handler.rs  lib.rs  main.rs  protocol.rs  settings.rs  shipit.capnp  shipit_protocol.proto  shipit_protocol.rs  state.rs  util.rs
