[package]

name = "shipit"
version = "0.0.1"
authors = ["David Flemström <david.flemstrom@gmail.com>"]

[dependencies.zmq]
git = "https://github.com/dflemstr/rust-zmq.git"
branch = "timeouts"

[dependencies.protobuf]
git = "https://github.com/dflemstr/rust-protobuf.git"

[dependencies]
log = "0.3.1"
env_logger = "0.3.0"
rand = "0.3.7"
time = "0.1.24"

[[example]]
name = "simple"
path = "examples/simple/main.rs"
